# revanche

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: Dependencies.cmake
resources/: revanche.rc
src/: CMakeLists.txt  backgroundiocontext.h  imgui_memory_editor.h  pch.hh  revancheapp.cc  revancheapp.h
src/vanch/: backgroundiocontext.cc  backgroundiocontext.h  command.cc  command.h  commandregistry.cc  commandregistry.h  message.cc  message.h  message_old.cc  message_old.h  messageregistry.cc  messageregistry.h  udpclient.cc  udpclient.h  udpscanner.cc  udpscanner.h
src/vanch/commands/: command.h  get_4g_params.cc  get_auto_polling_antenna.cc  get_auto_read_tag_type.cc  get_auto_reporting_conditions.cc  get_auto_reporting_content.cc  get_auto_reporting_fields.cc  get_baud_rate.cc  get_buzzer.cc  get_card_reading_mode.cc  get_frequency_points.cc  get_gpi_status.cc  get_heartbeat_packet.cc  get_mac_address.cc  get_output_power.cc  get_reader_id.cc  get_reader_name.cc  get_reader_time.cc  get_relay_auto_control_params.cc  get_relay_status.cc  get_reported_hardware_interface.cc  get_rj45_local_params.cc  get_rj45_remote_params.cc  get_rs485_address.cc  get_super_network_params.cc  get_tag_alarm.cc  get_tag_filter.cc  get_trigger_conditions.cc  get_version_info.cc  get_wiegand_params.cc  get_wifi_params.cc  read_14443a_tag.cc  read_15693_tag.cc  read_iso15693_tag.cc  select_14443a_sector.cc  set_4g_params.cc  set_auto_polling_antenna.cc  set_auto_read_tag_type.cc  set_auto_reporting_conditions.cc  set_auto_reporting_content.cc  (+28 more)
src/vanch/statuses/: auto_card_reading.cc  heartbeat.cc  status.h  udp_broadcast.cc
